[package]
name = "conllx-view"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
cairo-rs = "0.4"
conllx = { git = "https://github.com/danieldk/conllx-rs.git", branch = "graph-repr" }
enum-map ="0.2"
failure = "0.1"
getopts = "0.2"
gio = "0.4"
glib = "0.5"
itertools = "0.7"
rsvg = "0.4"
stdinout = "0.4"

[dependencies.gtk]
version = "0.4"
features = ["v3_10"]
